--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "validators",
-  "version": "0.0.0",
+  "name": "angular-form-validators",
+  "version": "1.0.0",
   "main": "index.html",
   "ignore": [
     "**/.*",
@@ -9,17 +9,8 @@
   ],
   "dependencies": {
     "jquery": "~2.0",
-    "underscore": "~1.5",
-    "bootstrap": "~3.1",
     "angular": "~1.2",
-    "angular-route": "~1.2",
-    "angular-animate": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-cookies": "~1.2",
     "angular-mocks": "~1.2",
-    "angular-ui-utils": "~0.1",
-    "angular-bootstrap": "~0.10",
-    "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.0"
   }
