--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "~3.1",
-    "angular": "~1.3",
+    "angular": "^1.3.20",
     "angular-route": "~1.2",
     "angular-animate": "~1.2",
     "angular-resource": "~1.2",
@@ -22,5 +22,8 @@
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.0"
+  },
+  "resolutions": {
+    "angular": "^1.3.20"
   }
 }
