--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "~0.8.3",
-    "grunt-ng-annotate": "~0.5",
+    "grunt-ng-annotate": "^1.0",
     "karma": "~0.12.6",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
     "karma-mocha-reporter": "~0.2.5",
     "karma-phantomjs-launcher": "~0.1.4",
-    "load-grunt-tasks": "~0.2"
+    "load-grunt-tasks": "~0.2",
+    "lodash" : "~3.10.0"
   }
 }
