--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,12 @@
 {
   "name": "angular-form-validators",
   "version": "1.0.0",
-  "main": "index.html",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components"
-  ],
   "dependencies": {
-    "jquery": "~2.0",
-    "underscore": "~1.5",
-    "bootstrap": "~3.1",
-    "angular": "^1.3.20",
-    "angular-route": "~1.2",
-    "angular-animate": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-mocks": "~1.2",
-    "angular-ui-utils": "~0.1",
-    "angular-bootstrap": "~0.10",
-    "moment": "~2.5",
-    "less.js": "~1.6",
-    "font-awesome": "~4.0"
+    "angular": "^1.3.0"
   },
-  "resolutions": {
-    "angular": "^1.3.20"
-  }
+  "devDependencies": {
+    "angular-mocks": "1.5.3"
+  },
+  "appPath": "app",
+  "moduleName": "validators"
 }
